--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -15,3 +15,8 @@ parserOptions:
 plugins:
   - react
   - '@typescript-eslint'
+rules:
+  react/react-in-jsx-scope: off
+settings:
+  react:
+    version: detect
