--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "yarn lint:typecheck && yarn lint:eslint && yarn lint:prettier",
+    "lint": "run-p lint:*",
     "lint:typecheck": "tsc",
     "lint:eslint": "eslint src/**/*.{ts,tsx}",
     "lint:prettier": "prettier src/**/*.{ts,tsx} --check",
-    "fix": "yarn fix:eslint && yarn fix:prettier",
+    "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write"
   },
@@ -27,6 +27,7 @@
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
