--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
-    "vite": "^2.9.5"
+    "vite": "^2.9.5",
+    "vite-plugin-windicss": "^1.8.4",
+    "windicss": "^3.5.1"
   }
 }
