--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -15,8 +15,35 @@ parserOptions:
 plugins:
   - react
   - '@typescript-eslint'
+  - unused-imports
+  - import
 rules:
   react/react-in-jsx-scope: off
+  no-unused-vars: off
+  unused-imports/no-unused-imports: error
+  unused-imports/no-unused-vars:
+    - warn
+    - vars: all
+      varsIgnorePattern: '^_'
+      args: after-used
+      argsIgnorePattern: '^_'
+  import/order:
+    - error
+    - groups:
+        - builtin
+        - external
+        - parent
+        - sibling
+        - index
+        - object
+        - type
+      pathGroups:
+        - pattern: '@alias/**'
+          group: parent
+          position: before
+      alphabetize:
+        order: asc
+      newlines-between: always
 settings:
   react:
     version: detect
