--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "npm-run-all": "^4.1.5",
