--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     ]
   },
   "dependencies": {
+    "apexcharts": "^3.35.0",
     "dayjs": "^1.11.1",
     "react": "^18.0.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
