update prettier rule

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "fix:prettier": "yarn lint:prettier --write"
   },
   "lint-staged": {
+    "**/*": [
+      "prettier --write --ignore-unknown"
+    ],
     "src/**/*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
+      "eslint --fix"
     ]
   },
   "dependencies": {
